namespace java com.moseeker.thrift.gen.useraccounts.struct


struct McdUserTypeDO {
    1: optional i32 userId,
    2: optional string cname,
    3: optional string email,
	4: optional string custom_field,
	5: optional i32 company_id,
	6: optional string mobile
}